# metis

./: .gitignore  Cargo.toml  README.md  justfile
backend/: .gitignore  pyproject.toml
backend/src/metis/: settings.py
backend/src/metis/adapters/: annotate.py  cli.py  web.py
backend/src/metis/benchmark/: beir_adapter.py  gold.py  ingestion.py  runner.py
backend/src/metis/core/: agent.py  embed_v2.py  enrich.py  eval.py  generated_types.py  ingest.py  labels.py  llm.py  prompts.py  retrieve.py  retrieve_v2.py  schema.py  schema_tree.py  store.py  toc.py  tools.py  tools_v2.py  tree_store.py  vectorize.py
backend/src/metis/core/parsers/: __init__.py  base.py  docling_parser.py  pymupdf_parser.py
backend/src/metis/static/: annotate.html
backend/tests/: conftest.py  test_agent.py  test_beir_adapter.py  test_bench_cli.py  test_cli.py  test_enrich.py  test_ingestion_bench.py  test_labels.py  test_llm.py  test_parsers.py  test_prompts.py  test_retrieve.py  test_runner.py  test_schema.py  test_schema_tree.py  test_settings.py  test_store.py  test_tools.py  test_tree_store.py  test_vectorize.py  test_web.py
backend/tests/eval/: MANIFEST.md  fetch_eval_papers.sh  retrieval_eval.jsonl
crates/metis-typegen/: Cargo.toml
crates/metis-typegen/schemas/: BboxSelection.json  ChatRequest.json  ChatStreamEvent.json  ConversationFull.json  ConversationMessage.json  ConversationMeta.json  EvidenceItem.json  IngestResponse.json  VectorizeResponse.json  _combined.json
crates/metis-typegen/src/: main.rs
crates/metis-types/: Cargo.toml
crates/metis-types/src/: lib.rs
metis-frontend/: index.html  package-lock.json  package.json
metis-frontend/scripts/: build-sidecar.ts  setup-sidecar-dev.ts
metis-frontend/src/: App.css  App.tsx
metis-frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
metis-frontend/src-tauri/capabilities/: default.json
metis-frontend/src-tauri/src/: lib.rs  main.rs
metis-frontend/src/backend/: generated.ts  generated_types.ts  http.ts
metis-frontend/src/components/: BBoxOverlay.tsx  ChatMessage.tsx  ChatPanel.tsx  ConversationList.tsx  NoteMarkers.tsx  NotesPanel.tsx  PageSlot.tsx  PdfViewer.tsx  (+2 more)
scripts/: sync-types.sh
(+6 files in other folders)
